Legacy GPencil settings in Annotations #63455

Closed
opened 2019-04-10 11:30:27 +02:00 by ChristopherAnderssarian · 3 comments

System Information
Operating system: Microsoft Windows 7
GPU: ASUS Strix Radeon Vega 64
CPU: Intel(R) Core(TM) i7-5960X
RAM: 32.0 GB
Full System Information: Here

Blender Version

Broken: 2.79b > 2.80, blender-2.80.0-git.2a79e3463130-windows64
Worked: 2.69 > 2.79b

Short description of error

Settings from 2.79 are kept as is, when opening in 2.80, but are not editable with the UI being striped down.

This is a problem when layers are locked or opacity is zero etc...

Exact steps for others to reproduce the error

GPencil (Annotations).blend

The issue is that GPencil layers can be locked in 2.79 and when opened is 2.80 are uneditable.

This is also true with opacity:

Full_Image_.PNG 2.79.PNG 2.80.PNG
Original GPencil Image 2.79 with yellow at 0% opacity 2.80 with yellow at 0% opacity that can't be changed

From what I can see this only affects: Opacity and Lock layers. Tint has no effect, for example. There could be more parameters to find though...

**System Information** Operating system: Microsoft Windows 7 GPU: ASUS Strix Radeon Vega 64 CPU: Intel(R) Core(TM) i7-5960X RAM: 32.0 GB Full System Information: [Here ](https://developer.blender.org/p/Christopher_Anderssarian/) **Blender Version** Broken: 2.79b > 2.80, `blender-2.80.0-git.2a79e3463130-windows64` Worked: 2.69 > 2.79b **Short description of error** Settings from 2.79 are kept as is, when opening in 2.80, but are not editable with the UI being striped down. This is a problem when layers are locked or opacity is zero etc... **Exact steps for others to reproduce the error** [GPencil (Annotations).blend](https://archive.blender.org/developer/F6922691/GPencil__Annotations_.blend) The issue is that GPencil layers can be locked in 2.79 and when opened is 2.80 are uneditable. This is also true with opacity: | ![Full_Image_.PNG](https://archive.blender.org/developer/F6926860/Full_Image_.PNG) |![2.79.PNG](https://archive.blender.org/developer/F6922685/2.79.PNG) | ![2.80.PNG](https://archive.blender.org/developer/F6922687/2.80.PNG) | | -- | -- | -- | | Original GPencil Image | 2.79 with yellow at 0% opacity | 2.80 with yellow at 0% opacity that can't be changed | From what I can see this only affects: Opacity and Lock layers. Tint has no effect, for example. There could be more parameters to find though...
Antonio Vazquez was assigned by ChristopherAnderssarian 2019-04-10 11:30:27 +02:00

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian

This issue was referenced by 99f1e3d57f

This issue was referenced by 99f1e3d57fa1ee1f4400c299f1247ac5c614b6f0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63455
No description provided.