Fix T63455: Legacy GPencil settings in Annotations